--- a/src/org/ref/python150题.org
+++ b/src/org/ref/python150题.org
@@ -1,17 +1,34 @@
 #+STARTUP: INDENT OVERVIEW
 #+TAGS: { FEATURES(f) STANDARD(s) STRING(t) LIST(l) DICT(d) }
 
-* python 150题 [40%]
-** TODO 语言特性 [1/6]                                           :FEATURES:
-  1. [ ] 谈谈对Python和其他语言的区别
-  2. [ ] 简述解释型和编译型编程语言
-  3. [ ] Python的解释器种类及相关特点?
-  4. [ ] 说说你知道的Python3和Python2之间的区别?
-  5. [ ] Python3和Python2中int和long的区别?
+* python 150题 [60%]
+** DONE 语言特性 [6/6]                                            :FEATURES:
+  1. [X] 谈谈对Python和其他语言的区别
+     1) 不用大括号来表示缩进
+     2) 弱类型, 解释性语言
+     3) 强大的标准库
+     4) 扩展性很强
+  2. [X] 简述解释型和编译型编程语言
+     - 解释型 :: 每次运行都要解释成成机器码然后运行，效率较低, 但是移植性强
+     - 编译型 :: 先将代码编译成可执行文件，以后运行时可以直接执行，效率高, 移植性差
+  3. [X] Python的解释器种类及相关特点?
+     - CPython: 使用最广泛python解释器
+     - IPython: 基于CPython的解释器，增强了其交互性
+     - JPython: 运行在Java上的解释器
+     - PyPy: 对代码进行动态编译，提高了执行速度
+  4. [X] 说说你知道的Python3和Python2之间的区别?
+     1) print不再是语句，而是函数
+     2) /不再是地板除, 而是真除法
+     3) int 和 long 统一为int型
+     4) 一系列返回列表的对象返回值改为迭代器对象，比如range
+     5) 新增了nonlocal关键字实现闭包
+  5. [X] Python3和Python2中int和long的区别?
+     - Python2: int的范围和机器位数有关, long的范围和虚拟内存大小有关
+     - Python3: long合并到int上
   6. [X] xrange和range的区别?
      xrange返回一个惰性求值数据生成器对象, 即便范围很大也不会占用大量内存，而
      range则会直接生成一个列表，如果范围大会占用大量内存。
-** TODO 编码规范 [5/12]                                          :STANDARD:
+** TODO 编码规范 [5/12]                                           :STANDARD:
   7. [X] 什么时PEP8?
      PEP(Python Enchantment Proposal) 8, 内容是python代码风格指南
   8. [X] 了解python之禅吗?
