--- a/src/org/gtd/works_gtd.org
+++ b/src/org/gtd/works_gtd.org
@@ -37,11 +37,12 @@ DEADLINE: <2021-04-01 Thu 21:00>
 - [ ] 耳机
 * Project
 ** TODO [#C] 完成leetcode两道题                                      :learn:
-SCHEDULED: <2021-03-31 Wed 21:00 +1d>
+SCHEDULED: <2021-04-01 Thu 21:00 +1d>
 :PROPERTIES:
 :LINK: [[https://leetcode-cn.com][leetcode]]
-:LAST_REPEAT: [2021-03-30 Tue 23:41]
+:LAST_REPEAT: [2021-03-31 Wed 23:57]
 :END:
+- State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
 ** SCH [#B] 完成python150题 [40%]                                   :learn:
@@ -86,3 +87,5 @@ DEADLINE: <2021-03-31 周三 21:20>
 :PROPERTIES:
 :LINK: [[https://orgmode.org/manual/index.html#SEC_Contents][org manual]]
 :END:
+** 学习 利为游戏引擎                                                 :learn:
+
